--- a/configs/facility-simple.yaml
+++ b/configs/facility-simple.yaml
@@ -16,7 +16,7 @@ model:
 # Metric configuration (simplified but maintains compatibility)
 metric:
   class: "standard_json"
-  evaluation_mode: "flattened"
+  evaluation_mode: "full_json_comparison"
   output_fields: ["urgency", "sentiment", "categories"]
 
 # Optimization settings
