--- a/configs/facility.yaml
+++ b/configs/facility.yaml
@@ -44,7 +44,7 @@ prompt:
 metric:
   class: "prompt_ops.core.metrics.StandardJSONMetric"
   params:
-    evaluation_mode: "flattened"
+    evaluation_mode: "full_json_comparison"
     # Fields to evaluate (with optional weights) - these will also be used as required fields
     output_fields: ["urgency", "sentiment", "categories"]
     # Nested fields to evaluate
