--- a/configs/hotpotqa.yaml
+++ b/configs/hotpotqa.yaml
@@ -1,15 +1,15 @@
 model:
-  name: "openrouter/meta-llama/llama-3.3-70b-instruct"
+  name: "openrouter/meta-llama/llama-3.1-8b-instruct"
   api_base: "https://openrouter.ai/api/v1"
   temperature: 0.0
-  max_tokens: 2048
+  max_tokens: 40960
 
 dataset:
-  adapter_class: "prompt_ops.datasets.hotpotqa.HotpotQAAdapter"
-  path: "/Users/justinai/Documents/Code/prompt-ops/use-cases/hotpotqa/hotpotqa_sample.json"
-  train_size: 0.005
-  validation_size: 0.005
-  test_size: 0.008
+  adapter_class: "src/prompt_ops/datasets/hotpotqa/adapter.py"
+  path: "use-cases/hotpotqa/hotpotqa_sample.json"
+  train_size: 0.07
+  validation_size: 0.07
+  test_size: 0.07
   adapter_params:
     passages_per_hop: 3
     max_hops: 2
@@ -22,21 +22,18 @@ dataset:
 
 prompt:
   text: |
-    You are an expert at answering complex questions that require multi-hop reasoning.
+    You are an expert at answering complex questions that require multi-hop reasoning. Give a short factoid answer.
   inputs: ["question", "context"]
   outputs: ["answer"]
 
 metric:
-  class: "prompt_ops.datasets.hotpotqa.HotpotQAMetric"
+  class: "src/prompt_ops/datasets/hotpotqa/metric.py"
   output_field: "answer"
   passage_weight: 0.5
 
-strategy:
-  class: "prompt_ops.core.prompt_strategies.BasicOptimizationStrategy"
-  num_threads: 1
-  max_examples: 3
-  max_bootstrapped_demos: 0
-  max_labeled_demos: 0
-  num_candidates: 1
-  auto: "basic"
-  minibatch: false
+optimization:
+  strategy: "llama"
+
+# Output configuration
+output:
+  prefix: "hotpotqa_file_path_test"
