--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,7 @@ jobs:
         pip install -e ".[dev]"
 
     - name: Run tests
+      env:
+        PROMPT_OPS_TEST_ENV: "1"
       run: |
         pytest tests/
