--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -3,9 +3,14 @@ fastapi==0.104.0
 uvicorn==0.23.2
 python-dotenv==1.0.0
 httpx==0.25.0
+python-multipart==0.0.20
 
 # llama-prompt-ops dependencies
 llama-prompt-ops==0.0.7
 scipy>=1.11.0
 importlib-metadata>=6.0.0
 pyyaml>=6.0
+
+# Testing dependencies
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
