--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "llama-prompt-ops"
-version = "0.0.7"
+version = "0.0.8"
 description = "A tool for migrating and optimizing prompts"
 readme = "README.md"
 authors = []
@@ -30,6 +30,7 @@ dependencies = [
     "litellm>=1.63.0",
     "huggingface-hub>=0.29.0",
     "datasets>=2.21.0",
+    "propcache==0.3.1"
 ]
 
 [project.optional-dependencies]
