--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -11,6 +11,9 @@ scipy>=1.11.0
 importlib-metadata>=6.0.0
 pyyaml>=6.0
 
+# Dataset analysis dependencies
+pandas>=1.5.0
+
 # Testing dependencies
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
