--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "litellm>=1.63.0",
     "huggingface-hub>=0.29.0",
     "datasets>=2.21.0",
-    "propcache==0.3.1"
+    "propcache==0.3.1",
+    "weave>=0.51.0"
 ]
 
 [project.optional-dependencies]
