--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Python cache files
 __pycache__/
 *.py[cod]
@@ -111,5 +112,7 @@ use-cases/joule/
 use-cases/dox/
 datasets/dropbox_qa/dropbox_data.json
 publish.sh
-
-scripts/
+web-app/docs
+frontend/package-lock.json
+docs/changelogs/
+experimental/
