--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,11 +2,8 @@ blank_issues_enabled: false
 
 contact_links:
   - name: Have you read the docs?
-    url: https://llama-stack.readthedocs.io/en/latest/index.html
-    about: Much help can be found in the docs
+    url: https://github.com/justinai/llama-prompt-ops/blob/main/README.md
+    about: Much help can be found in the README and documentation
   - name: Start a discussion
-    url: https://github.com/meta-llama/llama-stack/discussions/new
+    url: https://github.com/justinai/llama-prompt-ops/discussions/new
     about: Start a discussion on a topic
-  - name: Chat on Discord
-    url: https://discord.gg/llama-stack
-    about: Maybe chatting with the community can help
