--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: 🚀 Feature Request
-description: Suggest a new feature for llama-prompt-ops
+description: Suggest a new feature for prompt-ops
 labels: ["enhancement"]
 body:
 - type: textarea
