refactor: update project name and version, refactor references from llama-prompt-ops to prompt-ops

--- a/configs/facility-simple.yaml
+++ b/configs/facility-simple.yaml
@@ -17,7 +17,7 @@ model:
 
 # Metric configuration (simplified but maintains compatibility)
 metric:
-  class: "llama_prompt_ops.core.metrics.FacilityMetric"
+  class: "prompt_ops.core.metrics.FacilityMetric"
   strict_json: false
   output_field: "answer"
 
