--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include src/llama_prompt_ops *.py
-recursive-include src/llama_prompt_ops/interfaces *.py
-recursive-include src/llama_prompt_ops/core *.py
-recursive-include src/llama_prompt_ops/templates *
+recursive-include src/prompt_ops *.py
+recursive-include src/prompt_ops/interfaces *.py
+recursive-include src/prompt_ops/core *.py
+recursive-include src/prompt_ops/templates *
