--- a/use-cases/facility-support-analyzer/facility-simple.yaml
+++ b/use-cases/facility-support-analyzer/facility-simple.yaml
@@ -17,7 +17,7 @@ model:
 
 # Metric configuration (simplified but maintains compatibility)
 metric:
-  class: "llama_prompt_ops.core.metrics.FacilityMetric"
+  class: "prompt_ops.core.metrics.FacilityMetric"
   strict_json: false
   output_field: "answer"
 
