--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -12,6 +12,9 @@ scipy>=1.11.0
 importlib-metadata>=6.0.0
 pyyaml>=6.0
 
+# LLM API client (multi-provider support)
+litellm>=1.0.0
+
 # Dataset analysis dependencies
 pandas>=1.5.0
 
