--- a/configs/facility-simple.yaml
+++ b/configs/facility-simple.yaml
@@ -10,6 +10,7 @@ dataset:
   golden_output_field: "answer"
 
 # Model configuration (minimal required settings)
+# LiteLLM auto-detects API keys from provider-specific env vars (e.g., OPENROUTER_API_KEY)
 model:
   name: "openrouter/meta-llama/llama-3.3-70b-instruct"
   task_model: "openrouter/meta-llama/llama-3.3-70b-instruct"
