--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -6,14 +6,8 @@ python-dotenv==1.0.0
 httpx==0.25.0
 python-multipart==0.0.20
 
-# llama-prompt-ops dependencies
-llama-prompt-ops==0.0.7
-scipy>=1.11.0
-importlib-metadata>=6.0.0
-pyyaml>=6.0
-
-# LLM API client (multi-provider support)
-litellm>=1.0.0
+# Main prompt-ops package (includes all dependencies)
+prompt-ops>=0.0.9
 
 # Dataset analysis dependencies
 pandas>=1.5.0
