--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,15 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/diff": "^7.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "diff": "^8.0.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "npm": "^11.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
