--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -6,8 +6,11 @@ python-dotenv==1.0.0
 httpx==0.25.0
 python-multipart==0.0.20
 
-# Main prompt-ops package (includes all dependencies)
-prompt-ops>=0.0.9
+# NOTE: The main prompt-ops package should be installed in editable mode from the repo root:
+#   cd /path/to/prompt-ops && pip install -e .
+#
+# This ensures you're using the local development version of the package.
+# The package includes all core dependencies (dspy, litellm, scipy, etc.)
 
 # Dataset analysis dependencies
 pandas>=1.5.0
