--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -16,6 +16,9 @@ python-multipart==0.0.20
 pandas>=1.5.0
 PyYAML>=6.0
 
+# LLM dependencies
+litellm>=1.0.0
+
 # Testing dependencies
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
