--- a/frontend/backend/requirements.txt
+++ b/frontend/backend/requirements.txt
@@ -20,5 +20,7 @@ PyYAML>=6.0
 litellm>=1.0.0
 
 # Testing dependencies
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
+pytest>=8.3.0
+pytest-asyncio>=0.24.0
+pytest-cov>=6.0.0
+pytest-mock>=3.14.0
